--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
-url=mysql://jnsowu7w94jcg7x4:pyhq31a79b19wim8@spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/lpi0oh72jcg3z7rf
-username=jnsowu7w94jcg7x4
-password=pyhq31a79b19wim8
+url = jdbc:mysql://localhost:3306/files_storage_servlet
+username = Sergei
+password = root
 #locations = filesystem:src/main/resources/db.migration/
 locations=filesystem:src/main/resources/db/migration/
