--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,7 @@
-url = jdbc:mysql://localhost:3306/files_storage_servlet
-username = Sergei
-password = root
+url = mysql://xctybgv41ekb5bgg:pmjoocueqqmvb2om@xlf3ljx3beaucz9x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pdgxyef4dxhq9sh8
+username = xctybgv41ekb5bgg
+password = pmjoocueqqmvb2om
 
+#url = jdbc:mysql://localhost:3306/files_storage_servlet
+#username = Sergei
+#password = root
