--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <flyway.user>Sergei</flyway.user>
-        <flyway.password>root</flyway.password>
-        <flyway.schemas>jdbc:mysql://localhost:3306/files_storage_servlet</flyway.schemas>
-        <flyway.locations>filesystem:src/main/resources/db.migration/</flyway.locations>
+<!--        <flyway.user>Sergei</flyway.user>-->
+<!--        <flyway.password>root</flyway.password>-->
+<!--        <flyway.schemas>jdbc:mysql://localhost:3306/files_storage_servlet</flyway.schemas>-->
+<!--        <flyway.locations>filesystem:src/main/resources/db.migration/</flyway.locations>-->
     </properties>
 
     <dependencies>
@@ -79,19 +79,19 @@
     <build>
         <finalName>file-storage-rest-servlet</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.flywaydb</groupId>
-                <artifactId>flyway-maven-plugin</artifactId>
-                <version>8.0.0</version>
-                <configuration>
-                    <user>databaseUser</user>
-                    <password>databasePassword</password>
-                    <locations>locations</locations>
-                    <schemas>
-                        <schema>schemaName</schema>
-                    </schemas>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.flywaydb</groupId>-->
+<!--                <artifactId>flyway-maven-plugin</artifactId>-->
+<!--                <version>8.0.0</version>-->
+<!--                <configuration>-->
+<!--                    <user>databaseUser</user>-->
+<!--                    <password>databasePassword</password>-->
+<!--                    <locations>locations</locations>-->
+<!--                    <schemas>-->
+<!--                        <schema>schemaName</schema>-->
+<!--                    </schemas>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
