--- a/pom.xml
+++ b/pom.xml
@@ -10,20 +10,13 @@
     <packaging>war</packaging>
 
     <name>file-storage-rest-servlet Maven Webapp</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <url>https://file-storage-rest-servlet.herokuapp.com/</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-
-<!--        <flyway.user>Sergei</flyway.user>-->
-<!--        <flyway.password>root</flyway.password>-->
-<!--        <flyway.schemas>jdbc:mysql://localhost:3306/files_storage_servlet</flyway.schemas>-->
-<!--        <flyway.locations>filesystem:src/main/resources/db.migration/</flyway.locations>-->
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -79,19 +72,6 @@
     <build>
         <finalName>file-storage-rest-servlet</finalName>
         <plugins>
-<!--            <plugin>-->
-<!--                <groupId>org.flywaydb</groupId>-->
-<!--                <artifactId>flyway-maven-plugin</artifactId>-->
-<!--                <version>8.0.0</version>-->
-<!--                <configuration>-->
-<!--                    <user>databaseUser</user>-->
-<!--                    <password>databasePassword</password>-->
-<!--                    <locations>locations</locations>-->
-<!--                    <schemas>-->
-<!--                        <schema>schemaName</schema>-->
-<!--                    </schemas>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -115,7 +95,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 </project>
